other/block-kubectl-cp-by-pod-label/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bkc-podlabel-ns
