other/block-kubectl-cp-by-pod-label/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-kubectl-cp-by-pod-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
